test/data/syntax-errors/missing-loop.derp
dile foos || tru
  pront 0 derp
urp
